c/examples/writing-a-c-compiler-tests/tests/chapter_11/invalid_types/call_long_as_function.c
long x(void);

int main(void) {
    long x = 0;
    /* x isn't a function, so you can't call it */
    return x();
}